--- a/lounge.css
+++ b/lounge.css
@@ -69,3 +69,13 @@ div h2 {
 .artist {
   font-weight: bold;
 }
+#elixirs a:link {
+  color: #007e7e;
+}
+#elixirs a:visited {
+  color: #333333;
+}
+#elixirs a:hover {
+  background: #f88396;
+  color: #0d5353;
+}
